--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build" : "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/miladvafaeifard/modern-js-tooling-react/issues"
   },
-  "homepage": "https://github.com/miladvafaeifard/modern-js-tooling-react#readme"
+  "homepage": "https://github.com/miladvafaeifard/modern-js-tooling-react#readme",
+  "devDependencies": {
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
+  }
 }
