--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --config config/webpack.prod.js",
     "dev": "webpack-dev-server --watch --config config/webpack.dev.js",
     "dev:hot": "npm run dev -- --hot",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "format": "pretty-quick"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,9 @@
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
+    "prettier": "^1.15.3",
+    "pretty-quick": "^1.8.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
     "webpack-bundle-analyzer": "^3.0.3",
