--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "format": "pretty-quick",
     "lint": "eslint ./"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && npm run lint && npm run test"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/miladvafaeifard/modern-js-tooling-react.git"
@@ -29,16 +34,23 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "css-loader": "^2.0.1",
     "eslint": "^5.10.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.2.1",
     "jest": "^23.6.0",
+    "jest-dom": "^3.0.0",
     "prettier": "^1.15.3",
     "pretty-quick": "^1.8.0",
+    "react-axe": "^3.0.2",
+    "react-testing-library": "^5.4.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
     "webpack-bundle-analyzer": "^3.0.3",
