--- a/.babelrc
+++ b/.babelrc
@@ -17,7 +17,8 @@
 	"plugins": [
 		"react-hot-loader/babel",
 		"@babel/plugin-proposal-class-properties",
-		"@babel/plugin-syntax-dynamic-import"
+		"@babel/plugin-syntax-dynamic-import",
+		"@babel/plugin-proposal-export-default-from"
 	],
 	"env": {
 		"test": {
