fix failing counter component, ignore-loader target on  spec files

--- a/config/config.json
+++ b/config/config.json
@@ -14,9 +14,9 @@
   },
   "states": [
     {
-      "name": "home",
-      "url": "/home",
-      "component": "Home"
+      "name": "counter",
+      "url": "/counter",
+      "component": "Counter"
     }
   ],
   "movies": {
