--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
 					"last 2 versions",
 					"not dead",
 					"not < 2%",
-					"not ie 11" // take out if we need to support IE 11
+					"not ie 11"
 				],
 				"useBuiltIns": "entry"
 			}
