--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.2.1",
+    "ignore-loader": "^0.1.2",
     "jest": "^23.6.0",
     "jest-dom": "^3.0.0",
     "prettier": "^1.15.3",
