--- a/package.json
+++ b/package.json
@@ -65,16 +65,13 @@
     "webpack-merge": "^4.1.5"
   },
   "dependencies": {
-    "@uirouter/core": "^5.0.23",
-    "@uirouter/dsr": "^1.1.0",
-    "@uirouter/react": "^0.8.9",
-    "@uirouter/redux": "^0.1.1",
     "axios": "^0.19.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.6.0",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-axios-middleware": "^4.0.1",
     "redux-thunk": "^2.3.0"
